wip (all old static CGs)