@@ -4,27 +4,26 @@ import java.io.BufferedWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 import sootup.core.inputlocation.AnalysisInputLocation;
 import sootup.core.signatures.MethodSignature;
 import sootup.core.types.ClassType;
 import sootup.java.bytecode.frontend.inputlocation.DefaultRuntimeAnalysisInputLocation;
 import sootup.java.bytecode.frontend.inputlocation.JavaClassPathAnalysisInputLocation;
 import sootup.java.core.JavaIdentifierFactory;
-import sootup.java.core.JavaSootClass;
 import sootup.java.core.views.JavaView;
-import java.io.File;
-import java.util.stream.Stream;
 
-public class AnalysisApacheAnt {
+public class AnalysisApacheAnt2 {
     public static void main(String[] args) {
         List<AnalysisInputLocation> inputLocation = new ArrayList<>();
         inputLocation.add(new DefaultRuntimeAnalysisInputLocation());
         String libDirPath = "C:\\Users\\morit\\Desktop\\BachelorThesis\\Real-World_Applications\\ApacheAnt\\ApacheAnt-1.10.15-FULL\\apache-ant-1.10.15\\lib";
-        Path libDir = Path.of(libDirPath);
+        Path libDir = Paths.get(libDirPath);
         try (Stream<Path> paths = Files.list(libDir)) {
             paths.filter(Files::isRegularFile)
                     .filter(p -> p.toString().endsWith(".jar"))
@@ -61,10 +60,10 @@ public class AnalysisApacheAnt {
         entryPoints.add(entryMethodSignature2);
         entryPoints.add(entryMethodSignature3);
         entryPoints.add(entryMethodSignature4);
-        AbstractCallGraphAlgorithm algo = new ClassHierarchyAnalysisAlgorithm(view);
+        AbstractCallGraphAlgorithm algo = new RapidTypeAnalysisAlgorithm(view);
         CallGraph cg = algo.initialize(entryPoints);
 
-        Path output = Path.of("apacheAntOutputCHA.txt");
+        Path output = Paths.get("apacheAntOutputRTA.txt");
         try (BufferedWriter writer =
                      Files.newBufferedWriter(
                              output, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
